# R3-FL

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  TEST_COVERAGE_SUMMARY.md  project_plan_and_tasks.md  pyproject.toml  requirements.txt
.github/workflows/: docs.yml  tests.yml
docs/: conf.py  index.rst  src.blockchain.rst  src.fl_core.rst  src.integration.rst  src.rl_agent.rst  src.rst
scripts/: plot_metrics.py  run_benchmark.sh  run_benchmarks.py
src/blockchain/: package.json  storage_utils.py  web3_utils.py
src/blockchain/contracts/: ReputationManager.sol
src/fl_core/: client.py  dataset.py  server.py
src/integration/: strategy.py
src/rl_agent/: env.py  kernels.py  train.py
tests/: conftest.py  test_blockchain.py  test_fl_core.py  test_integration.py  test_rl_agent.py
