[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "r3-fl"
version = "0.1.0"
description = "RL-based Reputation System for Robust Federated Learning over Blockchain"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
